DevTools: Fix console.table wrap lines.
The console.table's rows should be nowrap, and they are, but child DOM
of DataGridNodes may override the "white-space" CSS.
Force nowrap property recursively on the DataGridNode content.

BUG=306915
R=pfeldman,caseq

Review URL: https://codereview.chromium.org/26156003

git-svn-id: svn://svn.chromium.org/blink/trunk@159888 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/inspector.css
+++ b/front_end/inspector.css
@@ -48,7 +48,10 @@ input[type="text"]:focus {
     display: none;
 }
 
-.nowrap {
+.nowrap,
+.nowrap-below,
+.nowrap-below div,
+.nowrap-below span {
     white-space: nowrap !important;
 }
 
